--- a/content/static/css/style.css
+++ b/content/static/css/style.css
@@ -39,7 +39,8 @@ p {
     width: 100%;
     height: 93vh;
     position: relative;
-    background: url('../img/main_background.png') center;
+    /* background: url('../img/main_background.png') center; */
+    background: url('../videos/main_background.mp4') center;
 }
 
 .showcase::after {
